# rom_toolkit_dmdc

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO_TESTING_AND_ROADMAP.md  USER_EXPERIENCE_REVIEW.md  WORKFLOWS.md  pyproject.toml
configs/: example_compare_models.toml  example_compare_with_pod_ml.toml  example_fit.toml  example_inspect_data.toml  example_latex_report.toml  example_pod.toml  example_pod_dmdc.toml  example_pod_ml.toml  example_pod_sensors.toml  example_rank_delay_sweep.toml  example_resampling.toml  example_sensor_selection.toml  example_validate_unseen_cases.toml  example_workflow.toml
data/: example_multicase_timeseries.csv  example_timeseries.csv
docs/: README.md  analysis_menu.md  case_quality_and_time_windows.md  config_workflows.md  dashboards_reports.md  data_format.md  data_inspection_resampling.md  engineering_reproducibility.md  hpc_workflow.md  known_limitations.md  loop_geometry_and_plots.md  math_background.md  math_index.md  phase1_phase2_workflow.md  phase3_phase4_workflow.md  phase7_pod_ml_workflow.md  phase8_phase9_workflow.md  pod.md  pod_dmdc.md  pod_ml.md  pod_sparse_sensing.md  regularized_continuous_dmdc.md  spatial_delay_sensor_selection.md  stability.md  start_here_connect_your_data.md  sweeps.md  thermal_loop_example.md  troubleshooting.md  troubleshooting_decision_tree.md  uncertainty_and_recommendations.md  validation.md
examples/: example_delay_fit.py  example_fit.py  example_multicase_fit.py  example_sensor_selection.py
tests/: conftest.py  test_adaptive_variable_dt.py  test_cli.py  test_cli_research_readiness.py  (+31 more)
(+179 files in other folders)
