[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmdc-analysis"
version = "0.1.0a0"
description = "Research-grade ROM and live monitoring toolkit for DMD/DMDc/POD workflows, live replay, dashboards, archives, and model registry scaffolding."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Andres Fierro"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]
parquet = ["pyarrow>=14"]
ml = ["scikit-learn>=1.3"]
dashboard = ["streamlit>=1.35", "plotly>=5.20"]
excel = ["openpyxl>=3.1"]
epics = ["pyepics>=3.5"]
live = ["streamlit>=1.35", "plotly>=5.20"]

[project.scripts]
dmdc = "dmdc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not large'"
markers = [
    "large: opt-in large-data or performance-oriented tests",
]
